@@ -17,6 +17,7 @@ layer <-
              style = NULL, force = FALSE,
              theme = if (force) trellis.par.get() else NULL,
              under = FALSE, superpose = FALSE,
+             update = NULL,
              ## Deprecated:
              eval = FALSE, etc = FALSE)
 {
@@ -82,7 +83,8 @@ layer <-
              groups = groups,
              superpose = superpose,
              style = style,
-             theme = theme)
+             theme = theme,
+             update = update)
     lay <- list(foo)
     class(lay) <- c("layer", "trellis")
     lay
@@ -207,6 +209,14 @@ print.layer <- print.default
     object <- update(object, panel = newpanel)
     ## need this to allow further calls to update() to insert arguments:
     object$call <- call("update", ocall)
+    ## allow arbitrary update()s specified by the layers
+    for (lay.i in lay) {
+        if (length(attr(lay.i, "update")) > 0) {
+            object <-
+                do.call("update",
+                        c(list(object), attr(lay.i, "update")))
+        }
+    }
     object
 }
 
